--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,18 @@ body {
     padding: 64px 32px;
 }
 
-.main {
+.section {
     display: grid;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+@media screen and (min-width: 760px) {
+    .section {
+        grid-template-columns: repeat(2, 1fr);
+        max-width: 650px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 .box {
@@ -25,12 +34,34 @@ body {
     padding: 20px 26px;
 }
 
+@media screen and (min-width: 760px) {
+    .box {
+        padding: 34px 40px;
+    }
+}
+
 .box:first-of-type {
     border-radius: 10px 10px 0 0;
 }
 
+@media screen and (min-width: 760px) {
+    .box:first-of-type {
+        grid-column: 1/3;
+        border-radius: 10px 10px 0 0;
+    }
+    .box:nth-of-type(2) {
+        border-radius: 0 0 0 10px;
+    }
+}
+
 .box:last-of-type {
     border-radius: 0 0 10px 10px;
+}
+
+@media screen and (min-width: 760px) {
+    .box:last-of-type {
+        border-radius: 0 0 10px 0;
+    }
 }
 
 .box--white {
